| Bug #30059 | End-space truncation is inconsistent or incorrect | ||
|---|---|---|---|
| Submitted: | 26 Jul 2007 5:01 | Modified: | 22 May 2008 14:02 |
| Reporter: | Paul DuBois | ||
| Status: | Closed | ||
| Category: | Server: Types | Severity: | S3 (Non-critical) |
| Version: | 5.0 and up | OS: | Any |
| Assigned to: | Gleb Shchepa | Target Version: | 5.1+ |
| Triage: | D2 (Serious) / R3 (Medium) / E3 (Medium) | ||
[26 Jul 2007 5:01]
Paul DuBois
[26 Jul 2007 5:26]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[5 Feb 2008 19:05]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41731 ChangeSet@1.2662, 2008-02-05 22:04:08+04:00, gshchepa@host.loc +4 -0 Fixed bug#30059. Server handles truncation for assignment of too-long values into CHAR/VARCHAR/TEXT columns in a different ways when the truncated characters are spaces. Space truncation processing has been synchronised over CHAR/VARCHAR/TEXT columns and strict/non-strict server modes: server always sends a truncation note instead of a warning or an error.
[6 Feb 2008 16:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41790 ChangeSet@1.2596, 2008-02-06 23:26:05+04:00, gshchepa@host.loc +9 -0 Fixed bug#30059. Server handles truncation for assignment of too-long values into CHAR/VARCHAR/TEXT columns in a different ways when the truncated characters are spaces: 1. CHAR(N) columns silently ignore end-space truncation; 2. TEXT columns post a truncation warning/error in the non-strict/strict mode. 3. VARCHAR columns always post a truncation note in any mode. Space truncation processing has been synchronised over CHAR/VARCHAR/TEXT columns: current behavior of VARCHAR columns has been propagated as standard. Binary-encoded string/BLOB columns are not affected.
[6 Feb 2008 21:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/41831 ChangeSet@1.2597, 2008-02-07 04:54:58+04:00, gshchepa@host.loc +1 -0 bdb.result: Minor post-fix for bug#30059.
[13 Mar 2008 20:27]
Bugs System
Pushed into 6.0.5-alpha
[13 Mar 2008 20:35]
Bugs System
Pushed into 5.1.24-rc
[13 Mar 2008 20:42]
Bugs System
Pushed into 5.0.60
[30 Mar 2008 20:43]
Jon Stephens
Documented as follows in the 5.0.60, 5.1.23-ndb-6.3.11, 5.1.24, and 6.0.5 changelogs:
The server handled truncation of values having excess trailing spaces
into CHAR, VARCHAR, and TEXT columns in different ways. This behavior
has now been made consistent for columns of all three of these types,
and now follows the existing behavior of VARCHAR columns in this regard;
that is, a Note is always issued whenever such truncation occurs.
This change does not affect columns of these three types when using a
binary encoding; BLOB columns are also unaffected by the change, since
they always use a binary encoding.
Behaviour change also noted in the char and text sections of the 5.0/5.1/6.0 Manual's
Data Types chapter.
[31 Mar 2008 16:54]
Bugs System
Pushed into 5.1.24-rc
[3 Apr 2008 15:02]
Bugs System
Pushed into 6.0.5-alpha
[6 May 2008 18:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/46410 ChangeSet@1.2623, 2008-05-06 21:43:46+05:00, gshchepa@host.loc +9 -0 Partial rollback of fix for bug #30059: End-space truncation is inconsistent or incorrect. For better conformance with standard, truncation procedure of CHAR columns has been changed to ignore truncation of trailing whitespace characters (note has been removed). Finally, for columns with non-binary charsets: 1. CHAR(N) columns silently ignore trailing whitespace truncation; 2. VARCHAR and TEXT columns issue Note about truncation. BLOBs and other columns with BINARY charset are unaffected.
[13 May 2008 16:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/46656 ChangeSet@1.2630, 2008-05-13 19:14:49+05:00, gshchepa@host.loc +1 -0 mix2_myisam.result: Post-push test case update (bug #30059).
[14 May 2008 17:19]
Bugs System
Pushed into 5.0.62
[14 May 2008 17:21]
Bugs System
Pushed into 5.1.25-rc
[15 May 2008 18:13]
Paul DuBois
Noted in 5.0.62, 5.1.25 changelogs. The server no longer issues warnings for truncation of excess spaces for values inserted into CHAR columns. This reverts a change in the previous release that caused warnings to be issued. Setting report to Need Doc Info pending push of fix into 6.0.x.
[22 May 2008 11:49]
Bugs System
Pushed into 6.0.6-alpha
[22 May 2008 14:02]
Paul DuBois
Noted in 6.0.6 changelog.
